made custom scrollbar. Made navbar in a fixed postion

--- a/styles/about_page_style.css
+++ b/styles/about_page_style.css
@@ -6,6 +6,7 @@
   background-position: center bottom;
   background-size: cover;
   min-height: 100%;
+  padding-top:50px;
 }
 #header_text {
   font-size: 50px;
@@ -16,7 +17,7 @@
   padding-bottom: 50px;
 }
 #self_port {
-  padding: 20px;
+  padding:20px;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -28,7 +29,7 @@
   padding-top: 5px;
   padding-bottom: 10px;
 }
-.body_icons {
+#body_icons {
   letter-spacing: 50px;
   text-align: center;
 }
@@ -43,8 +44,10 @@
   color: #1a1a1a;
   font-family: arial;
   width: 100%;
-  padding-left: 50px;
-  padding-right: 50px;
+  padding-left: 100px;
+  padding-right: 100px;
+  text-align: justify;
+  text-justify: inter-word;
 }
 
 #footer {
