--- a/styles/nav_bar_style.css
+++ b/styles/nav_bar_style.css
@@ -3,6 +3,10 @@
   background-color: #1a1a1a;
   overflow: hidden;
   z-index:1;
+  padding-right: 15px;
+  padding-left: 15px;
+  position: fixed;
+  width:100%
 }
 #icon_nav {
   font-size: 25px;
